; ModuleID = '/home/carl/AnghaBench/libgit2/tests/online/extr_push.c_test_online_push__bad_refspecs.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/online/extr_push.c_test_online_push__bad_refspecs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8**, i32 }

@.str = private unnamed_addr constant [6 x i8] c"b6:b6\00", align 1
@_remote = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_online_push__bad_refspecs() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca %struct.TYPE_3__, align 8
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8** %1, align 8
  %3 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %2, i32 0, i32 0
  store i8** %1, i8*** %3, align 8
  %4 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %2, i32 0, i32 1
  store i32 1, i32* %4, align 8
  %5 = load i64, i64* @_remote, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %11

7:                                                ; preds = %0
  %8 = load i64, i64* @_remote, align 8
  %9 = call i32 @git_remote_upload(i64 %8, %struct.TYPE_3__* %2, i32* null)
  %10 = call i32 @cl_git_fail(i32 %9)
  br label %11

11:                                               ; preds = %7, %0
  ret void
}

declare dso_local i32 @cl_git_fail(i32) #1

declare dso_local i32 @git_remote_upload(i64, %struct.TYPE_3__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
